# ascii-chart

./: DESIGN.md  README.md  pyproject.toml
ascii_chart/: __init__.py  chart_manager.py  cli.py  config.py
ascii_chart/charts/: __init__.py  architecture.py  base.py  flowchart.py  sequence.py  state.py  table.py  types.py
ascii_chart/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py
ascii_chart/renderers/: __init__.py  ascii.py
examples/: basic_usage.py  cli_usage.sh
tests/: test_charts.py  test_llm.py  test_renderers.py
